--- a/django_project/mysite/blog/templates/blog/base.html
+++ b/django_project/mysite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,8 +14,28 @@
   <div id="sidebar">
     <a href="/blog">
       <h2>My blog</h2>
-      <p>This is my blog.</p>
     </a>
+    <p>
+      This is my blog.
+      I've written {% total_posts %} posts so far.
+    </p>
+    <p>
+      <a href="{% url "blog:post_feed" %}">
+        Subscribe to my RSS feed
+      </a>
+    </p>
+    <h3>Latest posts</h3>
+    {% show_latst_posts 4 %}
+    <h3>Most Commented Posts</h3>
+
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+      {% for post in most_commented_posts %}
+        <li>
+          <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 </body>
 </html>.
