--- a/django_project/social_website/account/templates/base.html
+++ b/django_project/social_website/account/templates/base.html
@@ -27,7 +27,7 @@
                     Hello {{ request.user.first_name|default:request.user.username }},
                     <a href="{% url "logout" %}">Logout</a>
                 {% else %}
-                    <a href="{% url "register" %}">Sing-in</a>
+                    <a href="{% url "login" %}">Login</a>
             {% endif %}
             </span>
         </div>
