--- a/django_project/social_website/account/templates/account/dashboard.html
+++ b/django_project/social_website/account/templates/account/dashboard.html
@@ -4,7 +4,9 @@
 
 {% block content %}
     <h1>Dashboard</h1>
-    <p>Welcome to your dashboard.</p>
-    <a href="{% url "password_change"%}">Change the password</a>
+    <p>
+        Welcome to your dashboard. You can <a href="{% url "edit" %}">edit your
+        profile</a> or <a href="{% url "password_change" %}">change your password</a>.
+    </p>
 
 {% endblock %}
